--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Commit to the repo
       run: |
         git config --global user.name "johnnysclai/github-stats"
-        git config --global user.email "shuncheunglai@gmail.com"
+        git config --global user.email "25567299+johnnysclai@users.noreply.github.com"
         git add .
         # "echo" returns true so the build succeeds, even if no changed files
         git commit -m 'Update generated files' || echo
